crates/pardosa-mint-private-tests/tests/id_minting_compile_fail/index_new.rs
use pardosa::Index;
fn _no_external_index_mint() {
    let _ = Index::new(42);
}
fn main() {}
